fixed info box gap

--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,8 @@ body {
   margin-left: auto;
   margin-right: auto;
   box-shadow: 0 2px 5px 1px rgba(0, 0, 0, 0.2);
-  padding: 2.6em 0;
+  padding-top: 2.6em;
+  padding-bottom: 2.6em;
   font-weight: 700;
   position: relative;
 }
